--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
     </div>
     <hr>
 
+    <!-- question-4 -->
+    <div class="card-q4">
+        <div class="details">
+            <h1>Ducky</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <button>View</button>
+        </div>
+        <div class="img-container">
+            <img src="https://picsum.photos/150/150" alt="random-image">
+        </div>
+    </div>
+    <hr>
+
 </body>
 
 </html>
