--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@
     </div>
     <hr>
 
+    <!-- question-5 -->
+    <div class="card-q5">
+        <div class="img-container">
+            <img src="https://picsum.photos/250/250" alt="random-pic">
+        </div>
+        <h4>Category</h4>
+        <h1>Product Name</h1>
+        <p> 
+            <span class="discounted-price">₹200</span> 
+            <span class="original-price">₹490</span> 
+        </p>
+        <button>Buy Now</button>
+    </div>
+    <hr>
+
 </body>
 
 </html>
