--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
     </div>
     <hr>
 
+    <!-- question-6 -->
+    <div class="card-q6">
+        <div class="img-container-cover">
+            <img src="https://picsum.photos/1920/1080" alt="random-img">
+        </div>
+        <div class="img-container-profile">
+            <img src="https://picsum.photos/1920/1080" alt="random-img">
+        </div>
+        <div class="details">
+            <h1>Name Surname</h1>
+            <h3>Work Contact</h3>
+        </div>
+    </div>
+    <hr>
+
 </body>
 
 </html>
