--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         </div>
         <h4>Category</h4>
         <h1>Product Name</h1>
-        <p> 
-            <span class="discounted-price">₹200</span> 
-            <span class="original-price">₹490</span> 
+        <p>
+            <span class="discounted-price">₹200</span>
+            <span class="original-price">₹490</span>
         </p>
         <button>Buy Now</button>
     </div>
@@ -96,6 +96,20 @@
             <h1>Name Surname</h1>
             <h3>Work Contact</h3>
         </div>
+    </div>
+    <hr>
+
+    <!-- question-7 -->
+    <div class="card-q7">
+        <div class="img-container">
+            <img src="https://picsum.photos/1280/720" alt="random-image">
+        </div>
+        <div class="title-price">
+            <h1 class="title">Raspberry waffle</h1>
+            <h1 class="price">₹480</h1>
+        </div>
+        <p>Raspberries, milk, coconut oil, flour, eggs, lemon Juice, syrup</p>
+        <button>Add to Cart</button>
     </div>
     <hr>
 
